force-app/main/default/objects/Event__c/fields/Number_of_registrations__c.field-meta.xml
<CustomField>
    <fullName>Number_of_registrations__c</fullName>
    <label>Number of registrations</label>
    <summaryForeignKey>Event_Registration__c.Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>