force-app/main/default/objects/Event__c/fields/Venue_State__c.field-meta.xml
<CustomField>
    <fullName>Venue_State__c</fullName>
    <label>Venue State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>