force-app/main/default/objects/Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Number_of_participants_allowed__c</columns>
    <columns>Number_of_registrations__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>