force-app/main/default/objects/Event__c/listViews/Today_Events.listView-meta.xml
<ListView>
    <fullName>Today_Events</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Start_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today Events</label>
</ListView>