force-app/main/default/objects/Event__c/listViews/Upcoming_Events.listView-meta.xml
<ListView>
    <fullName>Upcoming_Events</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Number_of_participants_allowed__c</columns>
    <columns>Number_of_registrations__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Start_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Upcoming Events</label>
</ListView>